removed 'extra' from build since its now distributed as a standalone libdir

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,10 +24,10 @@ endif
 EXTRA_DIST = LICENSE.txt README.txt INSTALL.txt
 
 # subdirs that are built
-SUBDIRS = $(EXTRA_SUBDIRS) src man tcl po extra
+SUBDIRS = $(EXTRA_SUBDIRS) src man tcl po
 
 # subdirs that are always included in the dist, etc.
-DIST_SUBDIRS = asio extra man po portaudio portmidi src tcl
+DIST_SUBDIRS = asio man po portaudio portmidi src tcl
 
 BUILT_SOURCES = 
 if MSGFMT
