--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -111,7 +111,7 @@ SRC = g_canvas.c g_graph.c g_text.c g_rtext.c g_array.c g_template.c \
     d_resample.c \
     x_arithmetic.c x_connective.c x_midi.c \
     x_acoustics.c d_soundfile.c \
-    e_fft.c e_sqrt.c e_gfxstub.c e_dac.c
+    import.c e_fft.c e_sqrt.c e_gfxstub.c e_dac.c
 
 # FFTW
 #SRC +=  d_fft_fftw.c d_fftroutine.c
@@ -149,7 +149,7 @@ endif
 
 .PHONY: all install clean externs testbin
 
-all: $(PDDLL) $(PDEXEC) externs pdsend.exe pdreceive.exe pd.com
+all: $(PDDLL) $(PDEXEC) pdsend.exe pdreceive.exe pd.com
 
 $(OBJ) : %.o : %.c
 	$(CC) $(CFLAGS) $(GFLAGS) $(INCLUDE) -c -o $*.o $*.c 
