removed CPU-specific opt flags from CFLAGS so things build on all platforms

--- a/configure.ac
+++ b/configure.ac
@@ -27,7 +27,7 @@ case $host in
 	 EXTERNAL_EXTENSION=pd_darwin
 	fi
 
-	CFLAGS="$CFLAGS -fast -funroll-loops -fomit-frame-pointer"
+	CFLAGS="$CFLAGS -O3 -funroll-loops -fomit-frame-pointer"
 	INCLUDES="$INCLUDES -I/sw/include"
 	LDFLAGS="$LDFLAGS -L/sw/lib"
 	EXTERNAL_LDFLAGS="-bundle -undefined dynamic_lookup"
@@ -53,7 +53,7 @@ case $host in
 #        to make the final linking phase use g++
 #		asio=yes
 	portaudio=yes
-	CFLAGS="$CFLAGS -mcpu=i586 -mtune=pentium3 -O6 -funroll-loops -fomit-frame-pointer"
+	CFLAGS="$CFLAGS -O6 -funroll-loops -fomit-frame-pointer"
 # ASIO is a C++ library, so if its included, then use g++ to build
 	CC=g++
 	EXTERNAL_CFLAGS="-mms-bitfields"
@@ -64,7 +64,7 @@ case $host in
 	WINDOWS=yes
 	CYGWIN=yes
 	portaudio=yes
-	CFLAGS="$CFLAGS -mcpu=i586 -mtune=pentium3 -O6 -funroll-loops -fomit-frame-pointer"
+	CFLAGS="$CFLAGS -O6 -funroll-loops -fomit-frame-pointer"
 	EXTERNAL_CFLAGS=
 	EXTERNAL_LDFLAGS="-Wl,--export-dynamic -shared -lpd"
 	EXTERNAL_EXTENSION=dll
