--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -111,7 +111,8 @@ SRC = g_canvas.c g_graph.c g_text.c g_rtext.c g_array.c g_template.c \
     d_resample.c \
     x_arithmetic.c x_connective.c x_midi.c \
     x_acoustics.c d_soundfile.c \
-    import.c e_fft.c e_sqrt.c e_gfxstub.c e_dac.c
+    e_fft.c e_sqrt.c e_gfxstub.c e_dac.c \
+    import.c closebang.c initbang.c 
 
 # FFTW
 #SRC +=  d_fft_fftw.c d_fftroutine.c
