re-add d_delay since vd~ delread~ and delwrite~ are not working in vanilla

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ pd_SOURCES = g_canvas.c g_graph.c g_text.c g_rtext.c g_array.c g_template.c \
     s_utf8.c \
     d_ugen.c d_ctl.c d_arithmetic.c d_osc.c d_filter.c \
     d_array.c d_global.c \
+    d_delay.c \
     d_resample.c \
     x_arithmetic.c x_connective.c x_midi.c \
     x_acoustics.c d_soundfile.c \
