--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -175,24 +175,19 @@ $(VOBJ) : %.o : %.c
 
 pdsend.exe: u_pdsend.o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o pdsend.exe u_pdsend.o $(LIBS)
-	$(STRIP) pdsend.exe
 
 pdreceive.exe: u_pdreceive.o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o pdreceive.exe u_pdreceive.o $(LIBS)
-	$(STRIP) pdreceive.exe
 
 $(PDEXEC): s_entry.o pd.res
 	$(CC) $(LDFLAGS) -mwindows -o $(PDEXEC) s_entry.o pd.res $(LIBS) -L. -lpd
-	$(STRIP) -s $(PDEXEC)
 
 pd.com: s_entry.o
 	$(CC) $(LDFLAGS) -o pd.com s_entry.o $(LIBS) -L. -lpd
-	$(STRIP) -s pd.com
 
 $(PDDLL): $(OBJC)
 	$(CXX) -shared $(LDFLAGS) -o $(PDDLL) $(OBJC) $(LIBS) \
 		-Wl,--export-all-symbols -Wl,--out-implib=pd.a; 
-	$(STRIP) $(PDDLL)
 
 pd.res: pd.rc
 	windres pd.rc -O coff -o pd.res
@@ -219,11 +214,16 @@ install:  all
 	install -d $(DESTDIR)$(bindir)/../tcl/
 	install -p ../tcl/*.tcl $(DESTDIR)$(bindir)/../tcl/
 	install -p $(PDEXEC) $(DESTDIR)$(bindir)/$(PDEXEC)
+	$(STRIP) $(DESTDIR)$(bindir)/$(PDEXEC)
 	install -p pd.com $(DESTDIR)$(bindir)/pd.com
+	$(STRIP) $(DESTDIR)$(bindir)/pd.com
 	install -p pd.dll $(DESTDIR)$(bindir)/pd.dll
+	$(STRIP) $(DESTDIR)$(bindir)/pd.dll
 	install -p pd.ico $(DESTDIR)$(bindir)/pd.ico
 	install -p pdsend.exe $(DESTDIR)$(bindir)/pdsend.exe
+	$(STRIP) $(DESTDIR)$(bindir)/pdsend.exe
 	install -p pdreceive.exe $(DESTDIR)$(bindir)/pdreceive.exe
+	$(STRIP) $(DESTDIR)$(bindir)/pdreceive.exe
 	for dir in $(shell ls -1 ../doc | grep -v CVS); do \
 		echo "installing $$dir"; \
 		install -d $(DESTDIR)$(pddocdir)/$$dir ; \
