--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,7 +38,7 @@ pd_includedir = ${includedir}/pdextended
 pd_include_HEADERS = m_pd.h m_imp.h g_canvas.h s_stuff.h g_all_guis.h
 # compatibility: m_pd.h also goes into ${includedir}/
 include_HEADERS = m_pd.h
-noinst_HEADERS = g_all_guis.h s_audio_alsa.h s_audio_paring.h s_utf8.h g_magicglass.h
+noinst_HEADERS = g_all_guis.h s_audio_alsa.h s_audio_paring.h s_utf8.h g_magicglass.h scandir.h
 
 # we want these in the dist tarball
 EXTRA_DIST = CHANGELOG.txt notes.txt makefile.mingw
@@ -136,7 +136,7 @@ endif
 if WINDOWS
 LIBS += -lwsock32 -lwinmm -lole32
 pd_CFLAGS +=  -DUSEAPI_MMIO -DPD_INTERNAL
-pd_SOURCES += s_audio_mmio.c s_midi_mmio.c
+pd_SOURCES += s_audio_mmio.c s_midi_mmio.c scandir.c
 bin_SCRIPTS = 
 endif
 
