--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -110,7 +110,7 @@ SRC = g_canvas.c g_graph.c g_text.c g_rtext.c g_array.c g_template.c \
     d_delay.c d_resample.c \
     x_arithmetic.c x_connective.c x_midi.c \
     x_acoustics.c d_soundfile.c \
-    e_fft.c e_sqrt.c e_gfxstub.c e_dac.c \
+    e_fft.c e_sqrt.c e_gfxstub.c e_dac.c e_midi.c \
     g_magicglass.c \
     scandir.c \
     import.c path.c closebang.c initbang.c loadbang.c
