REBASE into 're-added d_math.c and removed e_sqrt.c to get [sqrt~] and [rsqrt~] working'
- doh!  Actually finally fix this...

--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -106,11 +106,11 @@ SRC = g_canvas.c g_graph.c g_text.c g_rtext.c g_array.c g_template.c \
     s_loader.c s_path.c s_entry.c s_audio.c s_midi.c \
     s_utf8.c \
     d_ugen.c d_ctl.c d_arithmetic.c d_osc.c d_filter.c \
-    d_array.c d_global.c \
+    d_math.c d_array.c d_global.c \
     d_delay.c d_resample.c \
     x_arithmetic.c x_connective.c \
     x_acoustics.c d_soundfile.c \
-    e_fft.c e_sqrt.c e_gfxstub.c e_dac.c e_midi.c \
+    e_fft.c e_gfxstub.c e_dac.c e_midi.c \
     g_magicglass.c \
     scandir.c \
     import.c path.c closebang.c initbang.c loadbang.c
