include split out headers e_fft.h and e_sqrt.h in install and dist

--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -246,7 +246,7 @@ install:  all
 	install -d $(DESTDIR)$(includedir)
 	install -p m_pd.h $(DESTDIR)$(includedir)
 	install -d $(DESTDIR)$(includedir)/pdextended
-	install -p g_all_guis.h g_canvas.h m_imp.h m_pd.h s_stuff.h \
+	install -p g_all_guis.h g_canvas.h m_imp.h m_pd.h s_stuff.h e_fft.h e_sqrt.h \
 		$(DESTDIR)$(includedir)/pdextended
 	@echo "Pd install succeeded."
 
