--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,7 @@ pd_SOURCES = g_canvas.c g_graph.c g_text.c g_rtext.c g_array.c g_template.c \
     import.c path.c closebang.c initbang.c loadbang.c
 
 pd_includedir = ${includedir}/pdextended
-pd_include_HEADERS = m_pd.h m_imp.h g_canvas.h s_stuff.h g_all_guis.h
+pd_include_HEADERS = m_pd.h m_imp.h g_canvas.h s_stuff.h g_all_guis.h e_fft.h e_sqrt.h
 # compatibility: m_pd.h also goes into ${includedir}/
 include_HEADERS = m_pd.h
 noinst_HEADERS = g_all_guis.h s_audio_alsa.h s_audio_paring.h s_utf8.h g_magicglass.h scandir.h
